cmake_minimum_required(VERSION 2.6)

project(mwa-reduce)

set(CMAKE_CXX_FLAGS "-O3 -ggdb -Wvla -Wall -DNDEBUG -march=native -std=c++0x")

find_library(CASA_MS_LIB casa_ms REQUIRED)
find_library(CASA_TABLES_LIB casa_tables REQUIRED)
find_library(CASA_CASA_LIB casa_casa REQUIRED)
find_library(CASA_MEASURES_LIB casa_measures REQUIRED)
find_library(CASA_FITS_LIB casa_fits REQUIRED)
find_library(FFTW3_LIB fftw3 REQUIRED)
find_path(FFTW3_INCLUDE_DIR NAMES fftw3.h)
find_package(Boost COMPONENTS filesystem system thread REQUIRED)
find_library(FITSIO_LIB cfitsio REQUIRED)
find_library(DL_LIB dl REQUIRED)
find_path(FITSIO_INCLUDE_DIR NAMES fitsio.h)
find_library(GSL_LIB NAMES gsl)
find_path(GSL_INCLUDE_DIR NAMES gsl/gsl_version.h)
find_library(GSL_CBLAS_LIB NAMES gslcblas)
find_path(GTS_INCLUDE_DIR NAMES gts.h)
find_path(GLIB_INCLUDE_DIR NAMES glib.h PATH_SUFFIXES glib-2.0)
find_package(LibXml2)

set(CASA_LIBS ${CASA_MS_LIB} ${CASA_TABLES_LIB} ${CASA_MEASURES_LIB} ${CASA_CASA_LIB} ${CASA_FITS_LIB} ${DL_LIB})

find_path(CASA_INCLUDE_DIR NAMES ms/MeasurementSets/MeasurementSet.h PATHS /usr/local/include/casacore PATH_SUFFIXES casacore)

include_directories(${CASA_INCLUDE_DIR})
include_directories(${Boost_INCLUDE_DIR})
include_directories(${FITSIO_INCLUDE_DIR})
include_directories(${FFTW3_INCLUDE_DIR})

set(BEAM_LIBS mwareducebeam ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})

if(GSL_LIB AND GSL_CBLAS_LIB AND GSL_INCLUDE_DIR)
  include_directories(${GSL_INCLUDE_DIR})
endif(GSL_LIB AND GSL_CBLAS_LIB AND GSL_INCLUDE_DIR)

if(GTS_INCLUDE_DIR AND GLIB_INCLUDE_DIR)
  include_directories(${GTS_INCLUDE_DIR} ${GLIB_INCLUDE_DIR})
endif(GTS_INCLUDE_DIR AND GLIB_INCLUDE_DIR)

set(CMAKE_REQUIRED_FLAGS "-std=c++0x")
include(CheckCXXSourceCompiles)
check_cxx_source_compiles(
"#include \"${CMAKE_CURRENT_SOURCE_DIR}/aocommon/uvector.h\"
int main(int argc, char* argv[])
{
return 0;
}" UVECTOR_COMPILES)
check_cxx_source_compiles(
"#include \"${CMAKE_CURRENT_SOURCE_DIR}/aocommon/lane_11.h\"
int main(int argc, char* argv[])
{
return 0;
}" LANE11_COMPILES)

# The following stuff will set the "rpath" correctly, so that
# LD_LIBRARY_PATH doesn't have to be set.

# use, i.e. don't skip the full RPATH for the build tree
SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
# when building, don't use the install RPATH already
# (but later on when installing)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE) 
SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
# add the automatically determined parts of the RPATH
# which point to directories outside the build tree to the install RPATH
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
# the RPATH to be used when installing, but only if it's not a system directory
LIST(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${CMAKE_INSTALL_PREFIX}/lib" isSystemDir)
IF("${isSystemDir}" STREQUAL "-1")
   SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
ENDIF("${isSystemDir}" STREQUAL "-1")

add_library(mwareducebeam fitsiochecker.cpp beam/joneslookupdipole.cpp beam/system.cpp beam/tilebeam.cpp beam/tilebeambase.cpp beam/tilebeam2014.cpp beam/tileimpedance.cpp beam/lnaimpedance.cpp alglib/ap.cpp alglib/alglibinternal.cpp alglib/alglibmisc.cpp alglib/integration.cpp alglib/interpolation.cpp alglib/linalg.cpp alglib/optimization.cpp alglib/solvers.cpp alglib/specialfunctions.cpp)
set(BEAMFILES "")

add_executable(addimg addimg.cpp fitsiochecker.cpp fitsreader.cpp fitswriter.cpp)
add_executable(aegean2model aegean2model.cpp fitsiochecker.cpp fitsreader.cpp model.cpp)
add_executable(analysesed analysesed.cpp sedanalyser.cpp model.cpp nlplfitter.cpp rmsynthesis.cpp progressbar.cpp subbandpassband.cpp)
add_executable(apparently apparently.cpp model.cpp fitsiochecker.cpp fitsreader.cpp)
add_executable(applybeam applybeam.cpp fitsiochecker.cpp fitsreader.cpp fitswriter.cpp)
add_executable(applyion applyion.cpp fftconvolver.cpp fitsiochecker.cpp fitsreader.cpp fitswriter.cpp model.cpp modelrenderer.cpp)
add_executable(applysolutions applysolutions.cpp)
add_executable(areas areas.cpp fitsiochecker.cpp fitsreader.cpp fitswriter.cpp)
add_executable(autoprocess autoprocess.cpp calibrator.cpp model.cpp beamevaluator.cpp peeler.cpp calibrationmethod.cpp mspredicter.cpp predicter.cpp progressbar.cpp spectrumsubtractor.cpp ${BEAMFILES})
add_executable(beam beam.cpp fitsiochecker.cpp fitsreader.cpp fitswriter.cpp mwa/metafitsfile.cpp mwa/mwaconfig.cpp progressbar.cpp ${BEAMFILES})
add_executable(calibrate calibrate.cpp calibrator.cpp beamevaluator.cpp calibrationmethod.cpp model.cpp predicter.cpp mspredicter.cpp ${BEAMFILES})
add_executable(collectionsolutions collectionsolutions.cpp beamevaluator.cpp model.cpp)
add_executable(combinespectra combinespectra.cpp beamevaluator.cpp imageweights.cpp model.cpp mspredicter.cpp predicter.cpp progressbar.cpp spectrummaker.cpp ${BEAMFILES})
add_executable(cluster cluster.cpp model.cpp)
add_executable(fftresample fftresample.cpp fftresampler.cpp fitsiochecker.cpp fitsreader.cpp fitswriter.cpp)
add_executable(fits2png fits2png.cpp fitsreader.cpp fitsiochecker.cpp pngfile.cpp)
add_executable(fitsmodel fitsmodel.cpp model.cpp fitsiochecker.cpp fitsreader.cpp cleanalgorithms/cleanalgorithm.cpp)
add_executable(flagantennae flagantennae.cpp)
add_executable(flagbaselines flagbaselines.cpp)
add_executable(flagionsolutions flagionsolutions.cpp)
add_executable(flagmwa flagmwa.cpp)
add_executable(flagsolutions flagsolutions.cpp)
add_executable(flagsubbands flagsubbands.cpp)
add_executable(imgclean imgclean.cpp model.cpp cleanalgorithms/cleanalgorithm.cpp cleanalgorithms/simpleclean.cpp fitsiochecker.cpp fitsreader.cpp fitswriter.cpp)
add_executable(imgstats imgstats.cpp fitsiochecker.cpp fitsreader.cpp)
add_executable(ionpeel ionpeel.cpp imageweights.cpp progressbar.cpp beamevaluator.cpp ionpeeler.cpp model.cpp predicter.cpp ${BEAMFILES})
add_executable(ionspectrum ionspectrum.cpp beamevaluator.cpp fluxaccumulator.cpp imageweights.cpp model.cpp ${BEAMFILES})
add_executable(ionspectrumcombine ionspectrumcombine.cpp beamevaluator.cpp fluxaccumulator.cpp imageweights.cpp model.cpp ${BEAMFILES})
add_executable(nwlayers nwlayers.cpp)
add_executable(matchsources matchsources.cpp model.cpp progressbar.cpp)
add_executable(model2kvis model2kvis.cpp model.cpp)
add_executable(mrc2model model.cpp mrc2model.cpp mrccatalogue.cpp)
add_executable(mwafinfo mwafinfo.cpp)
add_executable(pbaddimg pbaddimg.cpp fitsiochecker.cpp fitsreader.cpp fitswriter.cpp)
add_executable(pbcorrect pbcorrect.cpp fitsiochecker.cpp fitsreader.cpp fitswriter.cpp)
add_executable(peel peel.cpp peeler.cpp beamevaluator.cpp calibrationmethod.cpp model.cpp predicter.cpp mspredicter.cpp ${BEAMFILES})
add_executable(phasecal beamevaluator.cpp phasecal.cpp model.cpp predicter.cpp ${BEAMFILES})
add_executable(regridimg regridimg.cpp fitsiochecker.cpp fitsreader.cpp fitswriter.cpp)
add_executable(render render.cpp modelrenderer.cpp fftconvolver.cpp fitsiochecker.cpp fitsreader.cpp fitswriter.cpp model.cpp)
add_executable(editmodel editmodel.cpp beamevaluator.cpp model.cpp nlplfitter.cpp rmsynthesis.cpp ${BEAMFILES})
add_executable(sedcombine sedcombine.cpp sedanalyser.cpp model.cpp nlplfitter.cpp rmsynthesis.cpp progressbar.cpp subbandpassband.cpp)
add_executable(simcompress simcompress.cpp gausencoder.cpp)
add_executable(storetime storetime.cpp stopwatch.cpp)
add_executable(subtrmodel beamevaluator.cpp subtrmodel.cpp model.cpp predicter.cpp ${BEAMFILES} mspredicter.cpp progressbar.cpp)
add_executable(subtrspectrum subtrspectrum.cpp spectrumsubtractor.cpp beamevaluator.cpp model.cpp predicter.cpp ${BEAMFILES})
add_executable(spectrum beamevaluator.cpp spectrum.cpp spectrummaker.cpp imageweights.cpp model.cpp predicter.cpp mspredicter.cpp progressbar.cpp ${BEAMFILES})
add_executable(tests tests.cpp nlplfitter.cpp ${BEAMFILES})
add_executable(testms testms.cpp fftconvolver.cpp fftresampler.cpp fitsiochecker.cpp fitsreader.cpp fitswriter.cpp cleanalgorithms/cleanalgorithm.cpp  cleanalgorithms/joinedclean.cpp cleanalgorithms/multiscaleclean.cpp cleanalgorithms/simpleclean.cpp)
add_executable(testbugcasams testbugcasams.cpp)
add_executable(uvdist uvdist.cpp nlplfitter.cpp)

if(LIBXML2_FOUND)
	include_directories(${LIBXML2_INCLUDE_DIR})
	
	add_executable(vo2model vo2model.cpp model.cpp parser/votableparser.cpp)
	target_link_libraries(vo2model ${LIBXML2_LIBRARIES})

	add_executable(scaleimage scaleimage.cpp fitsiochecker.cpp fitsreader.cpp fitswriter.cpp parser/votableparser.cpp)
	target_link_libraries(scaleimage ${LIBXML2_LIBRARIES} ${FITSIO_LIB} ${CASA_LIBS})
	message("Libxml2 found: will build vo2model and scaleimage")
else(LIBXML2_FOUND)
  message("Libxml2 NOT found: will NOT build vo2model and scaleimage")
endif(LIBXML2_FOUND)

add_executable(aoimage aoimage.cpp btpimager.cpp fftconvolver.cpp fitsiochecker.cpp fitsreader.cpp fitswriter.cpp imageweights.cpp model.cpp modelrenderer.cpp)

target_link_libraries(addimg ${FITSIO_LIB} ${CASA_LIBS})
target_link_libraries(aegean2model ${FITSIO_LIB} ${CASA_LIBS})
target_link_libraries(applybeam ${FITSIO_LIB} ${CASA_LIBS})
target_link_libraries(apparently ${FITSIO_LIB} ${CASA_LIBS})
target_link_libraries(areas ${FITSIO_LIB} ${CASA_LIBS})

target_link_libraries(apparently ${CASA_LIBS})
target_link_libraries(applyion ${FITSIO_LIB} ${CASA_LIBS} ${FFTW3_LIB})
target_link_libraries(applysolutions ${CASA_LIBS})
target_link_libraries(autoprocess ${BEAM_LIBS} ${CASA_LIBS} ${FITSIO_LIB} ${CASA_MEASURES_LIB} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GSL_LIB} ${GSL_CBLAS_LIB})
target_link_libraries(beam ${BEAM_LIBS} ${CASA_LIBS} ${CASA_MEASURES_LIB} ${FITSIO_LIB} ${GSL_LIB} ${GSL_CBLAS_LIB})
target_link_libraries(calibrate ${BEAM_LIBS} ${CASA_LIBS} ${FITSIO_LIB} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GSL_LIB} ${GSL_CBLAS_LIB})
target_link_libraries(collectionsolutions ${BEAM_LIBS} ${FITSIO_LIB} ${CASA_LIBS} ${GSL_LIB} ${GSL_CBLAS_LIB})
target_link_libraries(combinespectra ${BEAM_LIBS} ${CASA_LIBS} ${FITSIO_LIB} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GSL_LIB} ${GSL_CBLAS_LIB})
target_link_libraries(editmodel ${BEAM_LIBS} ${FITSIO_LIB} ${CASA_LIBS})
target_link_libraries(fftresample ${FITSIO_LIB} ${FFTW3_LIB} ${CASA_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY})
target_link_libraries(fits2png ${CASA_LIBS} ${FITSIO_LIB} png )
target_link_libraries(fitsmodel ${CASA_LIBS} ${FITSIO_LIB} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} )
target_link_libraries(flagantennae ${CASA_LIBS})
target_link_libraries(flagbaselines ${CASA_LIBS})
target_link_libraries(flagmwa ${CASA_LIBS})
target_link_libraries(flagsubbands ${CASA_LIBS})
target_link_libraries(flagsolutions ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
target_link_libraries(imgclean ${FITSIO_LIB} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${CASA_LIBS})
target_link_libraries(imgstats ${FITSIO_LIB} ${CASA_LIBS})
target_link_libraries(ionpeel ${BEAM_LIBS} ${CASA_LIBS} ${FITSIO_LIB} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GSL_LIB} ${GSL_CBLAS_LIB})
target_link_libraries(ionspectrum ${BEAM_LIBS} ${CASA_LIBS} ${FITSIO_LIB} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GSL_LIB} ${GSL_CBLAS_LIB})
target_link_libraries(ionspectrumcombine ${BEAM_LIBS} ${CASA_LIBS} ${FITSIO_LIB} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GSL_LIB} ${GSL_CBLAS_LIB})
#target_link_libraries(mrc2model ${FITSIO_LIB} ${CASA_LIBS})
target_link_libraries(nwlayers ${CASA_LIBS})
target_link_libraries(pbaddimg ${FITSIO_LIB} ${CASA_LIBS} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
target_link_libraries(pbcorrect ${FITSIO_LIB} ${CASA_LIBS} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
target_link_libraries(peel ${BEAM_LIBS} ${CASA_LIBS} ${FITSIO_LIB} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GSL_LIB} ${GSL_CBLAS_LIB})
target_link_libraries(phasecal ${BEAM_LIBS} ${CASA_LIBS} ${FITSIO_LIB} ${GSL_LIB} ${GSL_CBLAS_LIB})
target_link_libraries(regridimg ${CASA_LIBS} ${FITSIO_LIB})
target_link_libraries(render ${FITSIO_LIB} ${CASA_LIBS} ${FFTW3_LIB})
target_link_libraries(simcompress ${CASA_LIBS})
target_link_libraries(spectrum ${BEAM_LIBS} ${CASA_LIBS} ${FITSIO_LIB} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GSL_LIB} ${GSL_CBLAS_LIB})
target_link_libraries(subtrmodel ${BEAM_LIBS} ${CASA_LIBS} ${FITSIO_LIB} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GSL_LIB} ${GSL_CBLAS_LIB})
target_link_libraries(subtrspectrum ${BEAM_LIBS} ${CASA_LIBS} ${FITSIO_LIB} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GSL_LIB} ${GSL_CBLAS_LIB})
target_link_libraries(tests ${BEAM_LIBS} ${CASA_LIBS} ${FITSIO_LIB})
target_link_libraries(testms ${CASA_LIBS} ${FFTW3_LIB} ${FITSIO_LIB} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY})
target_link_libraries(testbugcasams ${CASA_LIBS})
target_link_libraries(uvdist ${CASA_LIBS})

if(NOT GSL_CBLAS_LIB)
  message("GSL CBLAS lib was not found. GSL needs CBLAS: disabling GSL.")
endif(NOT GSL_CBLAS_LIB)

if(GSL_LIB AND GSL_CBLAS_LIB AND GSL_INCLUDE_DIR)
  add_definitions(-DHAVE_GSL)
  target_link_libraries(analysesed ${GSL_LIB} ${GSL_CBLAS_LIB})
  target_link_libraries(ionpeel ${GSL_LIB} ${GSL_CBLAS_LIB})
  target_link_libraries(tests ${GSL_LIB} ${GSL_CBLAS_LIB})
  target_link_libraries(editmodel ${GSL_LIB} ${GSL_CBLAS_LIB})
  target_link_libraries(sedcombine ${GSL_LIB} ${GSL_CBLAS_LIB})
  target_link_libraries(simcompress ${GSL_LIB} ${GSL_CBLAS_LIB})
  target_link_libraries(uvdist ${GSL_LIB} ${GSL_CBLAS_LIB})
else(GSL_LIB AND GSL_CBLAS_LIB AND GSL_INCLUDE_DIR)
  message("GNU scientific library (gsl) not found: some features will be disabled (this is not an error).")
endif(GSL_LIB AND GSL_CBLAS_LIB AND GSL_INCLUDE_DIR)

if(UVECTOR_COMPILES)
  add_definitions(-DHAVE_UVECTOR)
else(UVECTOR_COMPILES)
  message("ao::uvector does not compile: will use slower std::vector (this is not an error).")
endif(UVECTOR_COMPILES)
if(LANE11_COMPILES)
  add_definitions(-DHAVE_LANE11)
else(LANE11_COMPILES)
  message("ao::lane does not compile with C++11 features: will only use C++03 (this is not an error).")
endif(LANE11_COMPILES)

target_link_libraries(aoimage ${CASA_LIBS} ${FFTW3_LIB} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${FITSIO_LIB})
